# Shape-Interface

./: CMakeLists.txt
include/: circle.h  rectangle.h  shape.h  triangle.h
src/: CMakeLists.txt  circle.cpp  main.cpp  rectangle.cpp  shape.cpp  triangle.cpp
